Closed Bug 693963 Opened 13 years ago Closed 13 years ago

FixedMalloc.cpp fails to compile with Android NDK r6 release of the toolchain

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

ARM
Android
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: brbaker, Unassigned)

Details

Attachments

(1 file)

If you setup the android toolchain today you will not be able to compile tamarin since the toolchain is now picking up a possible uninitialized var in FixedMalloc.cpp

cc1plus: warnings being treated as errors
../MMgc/FixedMalloc.cpp: In member function 'const void* MMgc::FixedMalloc::FindBeginning(const void*)':
../MMgc/FixedMalloc.cpp:334: error: 'begin_recv' may be used uninitialized in this function
make: *** [MMgc/FixedMalloc.o] Error 1
Flags: flashplayer-triage+
Flags: flashplayer-qrb?
Flags: flashplayer-bug-
Attachment #566492 - Flags: review?(fklockii)
Comment on attachment 566492 [details] [diff] [review]
fix for android ndk r6

R+, but, questions:

1. I idly wonder if one still would get this warning if one switched to pointers and address-of (&) rather than using C++ references.  (That's just curiosity.)

2. I wonder if the real bug here is that our android build infrastructure is missing a setting to disable this warning that the rest of our build infrastructure has.  (That's more serious.)

If you have time, please double-check 2 before checking this in.
Attachment #566492 - Flags: review?(fklockii) → review+
I didn't change any settings to the build infrastructure, so no new switches were added. The only change I did was switch to the latest 4.4.3 compiler that you get if you setup the toolchain today.
(In reply to Brent Baker from comment #3)
> I didn't change any settings to the build infrastructure, so no new switches
> were added. The only change I did was switch to the latest 4.4.3 compiler
> that you get if you setup the toolchain today.

Ah, so the source for the discrepancy described by (2.) in comment 2 may be that we don't yet have builds going using such a recent version of GCC on other targets?

(Which there are other bugs for, e.g. Bug 664143 and Bug 559696.)

I can believe that.
I have logged a bug to update the android builder to use the 4.4.3 compiler (bug #694012). It actually looks like there are some other unused params in Traits.cpp that are producing a warning, but I will leave that clean up to be done as part of bug# 694012 as this one change is enough for the float team to move forward.
changeset: 6648:7dfb42cd1bcd
user:      Brent Baker <brbaker@adobe.com>
summary:   Bug 693963: FixedMalloc.cpp fails to compile with Android NDK r6 release of the toolchain (r+fklockii)

http://hg.mozilla.org/tamarin-redux/rev/7dfb42cd1bcd
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
I ran into the Traits issue and have a fix.  Shown in bug https://bugzilla.mozilla.org/show_bug.cgi?id=695495
Flags: flashplayer-qrb? → flashplayer-qrb+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: