Bug 693963: FixedMalloc.cpp fails to compile with Android NDK r6 release of the toolchain (r+fklockii)